--- a/Book_Management/WindowsFormsApp/WindowsFormsApp/WindowsFormsApp.csproj
+++ b/Book_Management/WindowsFormsApp/WindowsFormsApp/WindowsFormsApp.csproj
@@ -34,6 +34,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data, Version=8.0.13.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -50,6 +53,7 @@
   <ItemGroup>
     <Compile Include="BTNclass.cs" />
     <Compile Include="CHKBOXclass.cs" />
+    <Compile Include="Select.cs" />
     <Compile Include="COMBOBOXclass.cs" />
     <Compile Include="COMMON_Create_Ctl.cs" />
     <Compile Include="DATABASE.cs" />
@@ -88,6 +92,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
