--- a/Book_Management/WindowsFormsApp/WindowsFormsApp/WindowsFormsApp.csproj
+++ b/Book_Management/WindowsFormsApp/WindowsFormsApp/WindowsFormsApp.csproj
@@ -53,6 +53,12 @@
   <ItemGroup>
     <Compile Include="BTNclass.cs" />
     <Compile Include="CHKBOXclass.cs" />
+    <Compile Include="LOGIN_FORM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LOGIN_FORM.Designer.cs">
+      <DependentUpon>LOGIN_FORM.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sample_Form2.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RADIOclass.cs" />
+    <Compile Include="SIGNUP_FORM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SIGNUP_FORM.Designer.cs">
+      <DependentUpon>SIGNUP_FORM.cs</DependentUpon>
+    </Compile>
     <Compile Include="TABCTLclass.cs" />
     <Compile Include="TABPAGEclass.cs" />
     <Compile Include="Sample_Form.cs">
